--- a/quiz.html
+++ b/quiz.html
@@ -46,6 +46,48 @@
           <input type="radio" name="q3" value="b"> 22<br>
           <input type="radio" name="q3" value="c"> Error<br>
         </div>
+        <div>
+          <p>4. Which of the following is NOT a JavaScript data type?</p>
+          <input type="radio" name="q4" value="a"> String<br>
+          <input type="radio" name="q4" value="b"> Boolean<br>
+          <input type="radio" name="q4" value="c"> Float<br>
+        </div>
+        <div>
+          <p>5. What does CSS stand for?</p>
+          <input type="radio" name="q5" value="a"> Computer Style Sheets<br>
+          <input type="radio" name="q5" value="b"> Cascading Style Sheets<br>
+          <input type="radio" name="q5" value="c"> Creative Style Sheets<br>
+        </div>
+        <div>
+          <p>6. Which HTML tag is used to create a hyperlink?</p>
+          <input type="radio" name="q6" value="a"> &lt;link&gt;<br>
+          <input type="radio" name="q6" value="b"> &lt;a&gt;<br>
+          <input type="radio" name="q6" value="c"> &lt;href&gt;<br>
+        </div>
+        <div>
+          <p>7. What is the purpose of the `alt` attribute in an image tag?</p>
+          <input type="radio" name="q7" value="a"> To provide alternative text if the image fails to load<br>
+          <input type="radio" name="q7" value="b"> To specify the image source<br>
+          <input type="radio" name="q7" value="c"> To add a caption to the image<br>
+        </div>
+        <div>
+          <p>8. Which of the following is a JavaScript framework?</p>
+          <input type="radio" name="q8" value="a"> Django<br>
+          <input type="radio" name="q8" value="b"> Flask<br>
+          <input type="radio" name="q8" value="c"> React<br>
+        </div>
+        <div>
+          <p>9. What is the correct way to comment in CSS?</p>
+          <input type="radio" name="q9" value="a"> // This is a comment<br>
+          <input type="radio" name="q9" value="b"> /* This is a comment */<br>
+          <input type="radio" name="q9" value="c"> &lt;!-- This is a comment --&gt;<br>
+        </div>
+        <div>
+          <p>10. Which of the following is used to make a website responsive?</p>
+          <input type="radio" name="q10" value="a"> JavaScript<br>
+          <input type="radio" name="q10" value="b"> Media Queries<br>
+          <input type="radio" name="q10" value="c"> HTML Tables<br>
+        </div>
         <button type="submit">Submit</button>
       </form>
       <p id="result"></p>
